commit test file

--- a/codeSamples/callback_coffee_0.html
+++ b/codeSamples/callback_coffee_0.html
@@ -11,8 +11,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body>
-    <script type="text/javascript" src="callback_coffee.js"></script>
-
+    <script type="text/javascript" src="callback_coffee_0.js"></script>
+    <h1>Codelog</h1>
     <code id="log">
     </code>
   </body>
