--- a/codeSamples/callback_coffee_0.html
+++ b/codeSamples/callback_coffee_0.html
@@ -3,12 +3,20 @@
   <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script>
+      var file = 'callback_coffee_0.js';
+      function load(){
+        var script = document.createElement('script');
+        script.setAttribute('type', 'text/javascript');
+        script.setAttribute('src', file);
+        document.head.appendChild(script);
+      }
+    </script>
   </head>
   <body>
-    
     <h1>Codelog</h1>
-    <pre id="log"></pre>
-    <script type="text/javascript" src="callback_coffee_0.js"></script>
+    <button onclick="load()" type="button" class="btn btn-primary">run</button>
+    <pre id="log"></pre>    
   </body>
   
 </html>
