--- a/codeSamples/callback_coffee.html
+++ b/codeSamples/callback_coffee.html
@@ -4,12 +4,23 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script>
-      var file = 'callback_coffee_0.js';
+      var id = getQueryVariable('id');
+      var file = 'callback_coffee_' + id + '.js';
       function load(){
         var script = document.createElement('script');
         script.setAttribute('type', 'text/javascript');
         script.setAttribute('src', file);
         document.head.appendChild(script);
+      }
+      function getQueryVariable(variable)
+      {
+        var query = window.location.search.substring(1);
+        var vars = query.split("&");
+        for (var i=0;i<vars.length;i++) {
+          var pair = vars[i].split("=");
+          if(pair[0] == variable){return pair[1];}
+        }
+        return(false);
       }
     </script>
   </head>
