--- a/codeSamples/callback_coffee.html
+++ b/codeSamples/callback_coffee.html
@@ -4,7 +4,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script>
-      var id = getQueryVariable('id');
+      var id = getQueryVariable('id');      
       var file = 'callback_coffee_' + id + '.js';
       function load(){
         var script = document.createElement('script');
@@ -35,10 +35,12 @@
   <body>
     <div class="container">
 
-      <h1>Codelog <button onclick="load()" type="button" class="btn btn-primary">run</button></h1>
+      <h1>Codelog <span id='sampleid'></span><button onclick="load()" type="button" class="btn btn-primary">run</button></h1>
       
       <pre id="log" class="pre-scrollable" style="margin-top:10px;"></pre>    
-      
+      <script>      var id = getQueryVariable('id');
+        var sampleId = document.getElementById('sampleid')
+        sampleId.innerHTML += id;</script>
     </div>
   </body>
   
